# mini-hdfs

./: .gitignore  Cargo.toml  Makefile  build.rs  log4rs.yml  大作业1+简单的分布式文件系统.docx
proto/: file_service.proto  hdfs_service.proto
src/: lib.rs
src/common/: file_service.rs  hdfs_service.rs  mod.rs
src/common/utils/: mod.rs
src/name_node/: file_server.rs  hdfs_server.rs  mod.rs
