[package]
name = "mini-hdfs"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
log4rs = { version = "1.3.0", features = ["console_appender", "file_appender"] }
prost = "0.13.3"
sha2 = "0.10.8"
tar = "0.4.43"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.12.3"

[build-dependencies]
tonic-build = "*"
